# rust-os-dev

./: Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
kernel/: Cargo.toml
kernel/src/: allocator.rs  apic.rs  framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  task.rs
kernel/src/apic/: ioapic.rs  lapic.rs  mod.rs  reg.rs  rsdp.rs
kernel/src/framebuffer/: font.rs  mod.rs  utils.rs  wrapper.rs  writer.rs
kernel/src/interrupts/: handler.rs  index.rs  mod.rs
kernel/src/task/: executor.rs  keyboard.rs  shell.rs
src/: main.rs
