[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.6"
uart_16550 = "0.3.0"
spin = "0.9.8"
x86_64 = "0.14.8"
acpi = "5.0.0"
linked_list_allocator = "0.10.5"
bit_field = "0.10.2"
bitflags = "2.4.2"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.noto-sans-mono-bitmap]
version = "0.2.0"
default-features = false
features = ["regular", "size_20", "unicode-basic-latin", "unicode-specials"]