[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.7"
spin = "0.9.8"
x86_64 = "0.15.1"
acpi = "5.0.0"
linked_list_allocator = "0.10.5"
x2apic = "0.4.3"
pc-keyboard = "0.7.0"

[dependencies.noto-sans-mono-bitmap]
version = "0.3.0"
features = ["size_24"]

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]