[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader_api = "0.11"
spin = "0.10"
x86_64 = "0.15"
acpi = "5.0.0"
linked_list_allocator = "0.10.5"
x2apic = "0.4.3"
pc-keyboard = "0.7.0"

[dependencies.noto-sans-mono-bitmap]
version = "0.3"
features = ["size_24"]

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.futures-util]
version = "0.3.30"
default-features = false
features = ["alloc"]